hphp/test/slow/inout/bad-call-1.php.expectf
Fatal error: You cannot use this syntax with `inout`. in %s/bad-call-1.php on line 6
